# Mall-Management-System-in-CPP

./: AccessController.cpp  AccessController.h  Advertisement.cpp  Advertisement.h  AdvertisementStats.cpp  AdvertisementStats.h  AdvertisementSystem.cpp  AdvertisementSystem.h  AdvertisementSystem.json  Advertiser.cpp  Advertiser.h  Booking.cpp  Booking.h  CMakeLists.txt  Cashier.cpp  Cashier.h  Customer.cpp  Customer.h  CustomerSalesSystem.cpp  CustomerSalesSystem.h  CustomerSalesSystem.json  CustomerStats.h  DigitalAd.cpp  DigitalAd.h  Employee.cpp  Employee.h  EmployeeStats.h  Employee_Data.json  Entertainment.cpp  Entertainment.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  EventManager.json  EventStatistics.h  Feedback.cpp  Feedback.h  Group J Project Proposal Presentation.pptx  Inventory.cpp  (+75 more)
